--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "A simple boilerplate login/sign for mern applications.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "seed": "node scripts/seedDB.js",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -16,5 +22,22 @@
   "bugs": {
     "url": "https://github.com/clueking1/boilerPlateMernLogin/issues"
   },
-  "homepage": "https://github.com/clueking1/boilerPlateMernLogin#readme"
+  "homepage": "https://github.com/clueking1/boilerPlateMernLogin#readme",
+  "devDependencies": {
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.18.7"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "crypto-random-string": "^3.2.0",
+    "express": "^4.16.3",
+    "express-session": "^1.17.0",
+    "express-validator": "^6.4.0",
+    "if-env": "^1.0.4",
+    "mysql": "^2.18.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "validator": "^13.0.0"
+  }
 }
