--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^4.4.1",
     "cors": "^2.8.5",
     "crypto-random-string": "^3.2.0",
     "express": "^4.16.3",
@@ -38,6 +39,7 @@
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "reactstrap": "^8.4.1",
     "validator": "^13.0.0"
   }
 }
