--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:4001",
   "dependencies": {
+    "axios": "^0.19.2",
     "js-cookie": "^2.2.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
